# TFG_PabloRey

./: CMakeLists.txt  Makefile  file_handler.h  main.c  script.slurm  script_avx512.slurm  script_cuda.slurm  script_normal.slurm  simulation.c  simulation.h  subir.sh
scripts/: combinar_datos.py  descargar_distances.sh  reducir_astro.sh  reducir_main_source.sh
src/: aux_fun.c  aux_fun.h  calculations.c  calculations.h  cuda_functions.cu  cuda_functions.h  file_handler.c  file_handler.h  main.c  simulation.c  simulation.h  types.h
test_results/: Precision_errors  filtrado.txt  test_avx512.out  test_barnes_hut.txt  test_cuda.out  test_lectura.txt  test_precision_tiempo.txt  unidades.txt
